--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -4,7 +4,8 @@ $primary-color: color("deep-purple", "accent-3") !default;
 $secondary-color: color("blue", "base") !default;
 $link-color: color("light-blue", "accent-3") !default;
 $disabled-color: rgba(0, 0, 0, 0.3) !default;
-
+$surface-background: #ffffff;
+$surface-foreground: #000000;
 :root {
     --primary-color: $primary-color;
     --secondary-color: $secondary-color;
@@ -18,7 +19,7 @@ $spacer-y: 2px !default;
 // Navbar
 // --------------------------------------------------------
 $navbar-bg-color: $primary-color !default;
-$navbar-text-color: #FFFFFF !default;
+$navbar-text-color: #ffffff !default;
 $navbar-padding: 0.5rem 1rem !default;
 $navbar-brand-font-size: 1.25rem !default;
 $navbar-brand-margin: 2rem !default;
@@ -32,7 +33,7 @@ $card-body-padding: 1.5rem 1.25rem !default;
 $card-border-radius: 0.25rem !default;
 $card-cascade-margin: 4% !default;
 $card-banner-height: 120px !default;
-$card-bg-color: #FFFFFF !default;
+$card-bg-color: #ffffff !default;
 $card-avatar-width: 120px !default;
 $card-panel-padding: 24px !default;
 
@@ -62,7 +63,7 @@ $button-fab-small-size: 3rem !default;
 $button-fab-small-icon-size: 1rem !default;
 
 // Z Index
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $z-index-lightbox: 2000 !default;
 $z-index-snackbar: 1500 !default;
 $z-index-modal: 1000 !default;
@@ -73,47 +74,48 @@ $z-index-carousel: 5 !default;
 $z-index-tooltip: 3 !default;
 
 // Dropdown
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $dropdown-radius: 0.25rem !default;
 $dropdown-min-width: 11rem !default;
 $dropdown-item-padding: 1rem !default;
 $dropdown-item-color: rgba(0, 0, 0, 0.87) !default;
-$dropdown-hover-item-color: rgba(0, 0, 0, 0.1) !default;
+$dropdown-hover-item-bg-color: rgba(0, 0, 0, 0.05) !default;
+$dropdown-focus-item-bg-color: rgba(0, 0, 0, 0.12) !default;
 $dropdown-item-font-size: 0.95rem !default;
 $dropdown-item-icon-font-size: 1.4rem !default;
 
 // Tables
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $table-border-color: rgba(0, 0, 0, 0.12) !default;
 $table-striped-color: rgba(242, 242, 242, 0.5) !default;
 
 // Tooltips
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $tooltip-bg-color: color("grey", "darken-4") !default;
 $tooltip-padding: 10px 8px !default;
 $tooltip-font-size: 14px !default;
 $tooltip-border-radius: 2px !default;
 
 // Pagination
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $pagination-item-height: 30px !default;
 $pagination-item-border-radius: 2px !default;
 $pagination-item-color: #444444 !default;
 $pagination-item-font-size: 1.2rem !default;
 $pagination-item-padding-x: 12px !default;
 $pagination-item-active-bg-color: $primary-color !default;
-$pagination-item-active-color: #FFFFFF !default;
+$pagination-item-active-color: #ffffff !default;
 
 // Snackbar
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $snackbar-padding: 16px 24px !default;
 $snackbar-bg-color: rgba(0, 0, 0, 0.8) !default;
-$snackbar-color: #FFFFFF !default;
+$snackbar-color: #ffffff !default;
 $snackbar-border-radius: 2px !default;
 $snackbar-font-weight: 300 !default;
 
 // Collections
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $collection-color: rgba(0, 0, 0, 0.87) !default;
 $collection-line-height: 1.5rem !default;
 $collection-hover-color: rgba(0, 0, 0, 0.075) !default;
@@ -124,17 +126,17 @@ $collection-item-font-size: 1rem !default;
 $collection-item-icon-size: 1.6rem !default;
 
 // Collapsible
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $collapsible-border-color: color("grey", "lighten-2") !default;
 $collapsible-color: rgba(0, 0, 0, 0.85) !default;
-$collapsible-header-bg-color: #FFFFFF !default;
+$collapsible-header-bg-color: #ffffff !default;
 $collapsible-header-bg-hover-color: rgba(0, 0, 0, 0.075) !default;
 $collapsible-padding: 1rem !default;
 $collapsible-body-padding: 1.5rem 1.6rem !default;
 $collapsible-margin: 0.5rem 0 1rem 0 !default;
 
 // Tabs
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $tab-font-size: 0.9rem !default;
 $tab-color: rgba(0, 0, 0, 0.75) !default;
 $tab-line-height: 2.25rem !default;
@@ -144,7 +146,7 @@ $tab-hover-color: rgba(0, 0, 0, 0.08) !default;
 $tab-focus-color: rgba(0, 0, 0, 0.15) !default;
 
 // Modals
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $modal-padding: 16px 24px !default;
 $modal-border-radius: 2px !default;
 $modal-color: rgba(0, 0, 0, 0.87) !default;
@@ -154,21 +156,21 @@ $modal-med-max-width: 500px !default;
 $modal-small-max-width: 300px !default;
 $modal-large-max-width: 800px !default;
 $modal-responsive-max-width: 75% !default;
-$modal-bg-color: #FFFFFF !default;
+$modal-bg-color: #ffffff !default;
 
 // Lightbox
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $lightbox-bg-color: #000000 !default;
 $lightbox-controls-bg-color: rgba(0, 0, 0, 0.3) !default;
 $lightbox-counter-font-size: 14px !default;
 
 // Sidenav
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $sidenav-user-image-size: 64px !default;
 $sidenav-user-view-padding: 32px 32px 16px !default;
 
 // Shadow
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $z-depth-1: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12) !default;
 $z-depth-1-half: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15) !default;
 $z-depth-2: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !default;
@@ -177,7 +179,7 @@ $z-depth-4: 0 16px 28px 0 rgba(0, 0, 0, 0.22), 0 25px 55px 0 rgba(0, 0, 0, 0.21)
 $z-depth-5: 0 27px 24px 0 rgba(0, 0, 0, 0.2), 0 40px 77px 0 rgba(0, 0, 0, 0.22) !default;
 
 // Media Query Ranges
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $small-screen-up: 601px !default;
 $medium-screen-up: 993px !default;
 $large-screen-up: 1201px !default;
@@ -192,13 +194,13 @@ $medium-and-down: "only screen and (max-width : #{$medium-screen})" !default;
 $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})" !default;
 
 // Grid
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $num-cols: 12 !default;
 $gutter-width: 0.75rem !default;
 $row-border-padding: 0.5rem !default;
 
 // Typography
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $font-size-base: 1.25rem !default;
 $font-size-base-large: $font-size-base * 1.25 !default;
 $font-size-base-small: $font-size-base * 0.875 !default;
@@ -227,7 +229,7 @@ $responsive-interval-size: $range / $responsive-intervals !default;
 // ========================================================
 
 // Inputs
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $input-names: "input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea" !default;
 $input-padding: 20px 0px 6px !default;
 $input-line-height: 1.75rem !default;
@@ -240,22 +242,22 @@ $input-border-color: rgba(0, 0, 0, 0.42) !default;
 $input-border: 1px solid $input-border-color !default;
 $input-hover-border-color: rgba(0, 0, 0, 0.87) !default;
 $input-filled-padding: 12px 16px 0px !default;
-$input-filled-bg-color: #F5F5F5 !default;
+$input-filled-bg-color: #f5f5f5 !default;
 $input-outline-border-color: rgba(0, 0, 0, 0.24) !default;
 $input-outline-padding: 12px 16px 14px !default;
 
 // Slider
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $slider-height: 6px !default;
 $slider-thumb-size: 20px !default;
-$slider-bg-color: #D3D3D3 !default;
+$slider-bg-color: #d3d3d3 !default;
 $slider-line-color: $secondary-color !default;
 $slider-thumb-color: $secondary-color !default;
-$slider-tooltip-color: #FFFFFF !default;
+$slider-tooltip-color: #ffffff !default;
 $slider-tooltip-bg-color: $secondary-color !default;
 
 // Select
-// --------------------------------------------------------
+// ---------------------------------------------------------------------
 $select-radius: 0.25rem !default;
 $select-item-padding: 0.6rem !default;
 $select-item-color: rgba(0, 0, 0, 0.87) !default;
