Made Chips into a component

--- a/sass/empyreal.scss
+++ b/sass/empyreal.scss
@@ -27,6 +27,7 @@
 @import "components/carousel";
 @import "components/lightbox";
 @import "components/footer";
+@import "components/chips";
 @import "components/forms/forms";
 
 @import "components/animations/aos";
