--- a/nunjucks/chips.njk
+++ b/nunjucks/chips.njk
@@ -3,29 +3,45 @@
 {% set title = "Chips" %}
 
 {% block content %}
-  <div class="section scrollspy" id="introduction" data-name="Introduction">
-    <div data-syntax="html">
-      <div class="chip">
-        <img src="https://picsum.photos/100" alt="Person">
-        Mudit Somani
-      </div>
-      <div class="chip">Normal Tag</div>
-      <div class="chip">Tag
-        <i class="material-icons close">close</i>
-      </div>
+    <div class="section scrollspy" id="introduction" data-name="Introduction">
+        <div data-syntax="html">
+            <div class="chip">
+                <img src="https://picsum.photos/100" alt="Person">
+                Mudit Somani
+            </div>
+            <div class="chip">Normal Tag</div>
+            <div class="chip rounded">Rounded Chip</div>
+            <div class="chip">Tag
+                <i class="material-icons close">close</i>
+            </div>
+        </div>
     </div>
-  </div>
 
-  <br>
-  <div class="divider"></div>
-  <br>
+    <br>
+    <div class="divider"></div>
+    <br>
 
-  <div class="section scrollspy" id="sizes" data-name="Sizes">
-    <h1 class="blue-text">Sizes</h1>
-    <div data-syntax="html">
-      <div class="chip">Small Tag</div>
-      <div class="chip medium">Medium Tag</div>
-      <div class="chip large">Large Tag</div>
+    <div class="section scrollspy" id="sizes" data-name="Sizes">
+        <h1 class="blue-text">Sizes</h1>
+        <div data-syntax="html">
+            <div class="chip">Small Tag</div>
+            <div class="chip medium">Medium Tag</div>
+            <div class="chip large">Large Tag</div>
+        </div>
     </div>
-  </div>
+
+    <div class="section scrollspy" id="input" data-name="Input">
+        <h1 class="blue-text">Input</h1>
+        <div data-syntax="html">
+            <div class="chips">
+                <input type="text" id="input-1">
+            </div>
+        </div>
+    </div>
 {% endblock content %}
+
+{% block script %}
+    <script>
+        new empy.Chips(".chips", {});
+    </script>
+{% endblock script %}
