--- a/nunjucks/chips.njk
+++ b/nunjucks/chips.njk
@@ -34,7 +34,7 @@
         <h1 class="blue-text">Input</h1>
         <div data-syntax="html">
             <div class="chips">
-                <input type="text" id="input-1">
+                <input type="text" id="input1">
             </div>
         </div>
     </div>
@@ -42,6 +42,20 @@
 
 {% block script %}
     <script>
-        new empy.Chips(".chips", {});
+        new empy.Chips(".chips", {
+            autocomplete: {
+                data: [
+                    {
+                        name: "Microsoft"
+                    }, {
+                        name: "Apple"
+                    }, {
+                        name: "Yahoo",
+                    }, {
+                        name: "Google",
+                    }
+                ]
+            }
+        });
     </script>
 {% endblock script %}
