--- a/sass/components/_chips.scss
+++ b/sass/components/_chips.scss
@@ -58,12 +58,15 @@
 }
 
 .chips {
+	position: relative;
 	margin: 0 0 8px 0;
 	border-bottom: $input-border;
 	min-height: 45px;
 	outline: none;
 	transition: 0.15s cubic-bezier(0.4, 0, 0.2, 1), border-color 0.15s ease-in-out;
 	letter-spacing: 0.025rem;
+	cursor: text;
+	.chip {cursor: pointer;}
 	input {
 		background: none;
 		border: none;
