--- a/nunjucks/autocomplete.njk
+++ b/nunjucks/autocomplete.njk
@@ -19,14 +19,14 @@
         var autocomplete = new empy.Autocomplete("#autocomplete1", {
             data: [
                 {
-                    name: "Microsoft"
+                    value: "Microsoft"
                 }, {
-                    name: "Apple"
+                    value: "Apple"
                 }, {
-                    name: "Yahoo",
-                    alias: ["Harshit", "fat"]
+                    value: "Yahoo",
+                    alias: ["Harshit", "harsh"]
                 }, {
-                    name: "Google",
+                    value: "Google",
                     alias: ["Mudit", "Lol"]
                 }
             ]
