--- a/nunjucks/partials/navbar.html
+++ b/nunjucks/partials/navbar.html
@@ -31,7 +31,7 @@
         <a href="index.html" class="nav-item black-text">Home</a>
         <a href="get_started.html" class="nav-item black-text">Get Started</a>
     </ul>
-    <ul class="collapsible" id="main-collapsible" style="box-shadow:none">
+    <ul class="collapsible m-0" id="main-collapsible" style="box-shadow:none">
         <li>
             <div class="collapsible-header">
                 Utilities
