--- a/sass/components/_collapsible.scss
+++ b/sass/components/_collapsible.scss
@@ -1,12 +1,12 @@
 .collapsible {
-	@extend .z-depth-1;
-	border-top: 1px solid $collapsible-border-color;
-	border-right: 1px solid $collapsible-border-color;
-	border-left: 1px solid $collapsible-border-color;
 	margin: $collapsible-margin;
 	padding-left: 0px;
 	padding-right: 0px;
 	list-style: none;
+	li {box-shadow: $z-depth-1;}
+	li.active {
+		box-shadow: $z-depth-1-half;
+	}
 	.collapsible-header {
 		&:hover {
 			outline: 0;
@@ -18,7 +18,6 @@
 		line-height: 1.5;
 		padding: $collapsible-padding;
 		background-color: $collapsible-header-bg-color;
-		border-bottom: 1px solid $collapsible-border-color;
 		color: $collapsible-color;
 		transition: 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
 		font-size: 1rem;
