--- a/sass/empyreal.scss
+++ b/sass/empyreal.scss
@@ -7,6 +7,7 @@
 
 @import "components/normalize";
 @import "components/global";
+@import "components/progress";
 @import "components/helpers";
 @import "components/table";
 @import "components/waves";
