--- a/sass/components/_helpers.scss
+++ b/sass/components/_helpers.scss
@@ -122,85 +122,29 @@
 
 // Padding and Margin helpers
 
-.m-0 {margin: 0 !important;}
-.m-1 {margin: $spacer-x !important;}
-.m-2 {margin: $spacer-x*2 !important;}
-.m-3 {margin: $spacer-x*3 !important;}
-.m-4 {margin: $spacer-x*4 !important;}
-.m-5 {margin: $spacer-x*5 !important;}
+@for $i from 0 through 5 {
+	.m-#{$i} {margin: $spacer-x * $i !important;}
+	.ml-#{$i} {margin-left: $spacer-x * $i !important;}
+	.mr-#{$i} {margin-right: $spacer-x * $i !important;}
+	.mt-#{$i} {margin-top: $spacer-x * $i !important;}
+	.mb-#{$i} {margin-bottom: $spacer-x * $i !important;}
+	
+	.p-#{$i} {padding: $spacer-x * $i !important;}
+	.pl-#{$i} {padding-left: $spacer-x * $i !important;}
+	.pr-#{$i} {padding-right: $spacer-x * $i !important;}
+	.pt-#{$i} {padding-top: $spacer-x * $i !important;}
+	.pb-#{$i} {padding-bottom: $spacer-x * $i !important;}
+}
+
 .m-auto {margin: auto !important;}
-
-.ml-0 {margin-left: 0 !important;}
-.ml-1 {margin-left: $spacer-x !important;}
-.ml-2 {margin-left: $spacer-x*2 !important;}
-.ml-3 {margin-left: $spacer-x*3 !important;}
-.ml-4 {margin-left: $spacer-x*4 !important;}
-.ml-5 {margin-left: $spacer-x*5 !important;}
 .ml-auto {margin-left: auto !important;}
-
-.mr-0 {margin-right: 0 !important;}
-.mr-1 {margin-right: $spacer-x !important;}
-.mr-2 {margin-right: $spacer-x*2 !important;}
-.mr-3 {margin-right: $spacer-x*3 !important;}
-.mr-4 {margin-right: $spacer-x*4 !important;}
-.mr-5 {margin-left: $spacer-x*5 !important;}
 .mr-auto {margin-right: auto !important;}
-
-.mt-0 {margin-top: 0 !important;}
-.mt-1 {margin-top: $spacer-y !important;}
-.mt-2 {margin-top: $spacer-y*2 !important;}
-.mt-3 {margin-top: $spacer-y*3 !important;}
-.mt-4 {margin-top: $spacer-y*4 !important;}
-.mt-5 {margin-top: $spacer-x*5 !important;}
 .mt-auto {margin-top: auto !important;}
-
-.mb-0 {margin-bottom: 0 !important;}
-.mb-1 {margin-bottom: $spacer-y !important;}
-.mb-2 {margin-bottom: $spacer-y*2 !important;}
-.mb-3 {margin-bottom: $spacer-y*3 !important;}
-.mb-4 {margin-bottom: $spacer-y*4 !important;}
-.mb-5 {margin-bottom: $spacer-x*5 !important;}
 .mb-auto {margin-bottom: auto !important;}
-
-.p-0 {padding: 0 !important;}
-.p-0 {padding: 0 !important;}
-.p-1 {padding: $spacer-x !important;}
-.p-2 {padding: $spacer-x*2 !important;}
-.p-3 {padding: $spacer-x*3 !important;}
-.p-4 {padding: $spacer-x*4 !important;}
-.p-5 {padding: $spacer-x*5 !important;}
 .p-auto {padding: auto !important;}
-
-.pl-0 {padding-left: 0 !important;}
-.pl-1 {padding-left: $spacer-x !important;}
-.pl-2 {padding-left: $spacer-x*2 !important;}
-.pl-3 {padding-left: $spacer-x*3 !important;}
-.pl-4 {padding-left: $spacer-x*4 !important;}
-.pl-5 {padding-left: $spacer-x*5 !important;}
 .pl-auto {padding-left: auto !important;}
-
-.pr-0 {padding-right: 0 !important;}
-.pr-1 {padding-right: $spacer-x !important;}
-.pr-2 {padding-right: $spacer-x*2 !important;}
-.pr-3 {padding-right: $spacer-x*3 !important;}
-.pr-4 {padding-right: $spacer-x*4 !important;}
-.pr-5 {padding-left: $spacer-x*5 !important;}
 .pr-auto {padding-right: auto !important;}
-
-.pt-0 {padding-top: 0 !important;}
-.pt-1 {padding-top: $spacer-y !important;}
-.pt-2 {padding-top: $spacer-y*2 !important;}
-.pt-3 {padding-top: $spacer-y*3 !important;}
-.pt-4 {padding-top: $spacer-y*4 !important;}
-.pt-5 {padding-top: $spacer-x*5 !important;}
 .pt-auto {padding-top: auto !important;}
-
-.pb-0 {padding-bottom: 0 !important;}
-.pb-1 {padding-bottom: $spacer-y !important;}
-.pb-2 {padding-bottom: $spacer-y*2 !important;}
-.pb-3 {padding-bottom: $spacer-y*3 !important;}
-.pb-4 {padding-bottom: $spacer-y*4 !important;}
-.pb-5 {padding-bottom: $spacer-x*5 !important;}
 .pb-auto {padding-bottom: auto !important;}
 
 
