--- a/nunjucks/buttons.njk
+++ b/nunjucks/buttons.njk
@@ -25,9 +25,9 @@
     <div class="section scrollspy" id="sizes" data-name="Sizes">
         <h3>Sizes</h3>
         <div data-syntax="html">
-            <a href="#!" class="btn btn-small">Small</a>
-            <a href="#!" class="btn">Medium</a>
-            <a href="#!" class="btn btn-large">Large</a>
+            <a href="#!" class="btn btn-small"><i class="material-icons left">cloud</i>Small</a>
+            <a href="#!" class="btn"><i class="material-icons left">cloud</i>Medium</a>
+            <a href="#!" class="btn btn-large"><i class="material-icons left">cloud</i>Large</a>
             <a href="#!" class="btn btn-block">Block</a>
         </div>
     </div>
@@ -76,12 +76,12 @@
     <div class="section scrollspy" id="outline" data-name="Outline">
         <h3>Outline Buttons</h3>
         <div data-syntax="html">
-            <a href="#!" class="btn red-outline">Red</a>
-            <a href="#!" class="btn blue-outline">Blue</a>
-            <a href="#!" class="btn green-outline">Green</a>
-            <a href="#!" class="btn indigo-outline">Indigo</a>
-            <a href="#!" class="btn purple-outline">Purple</a>
-            <a href="#!" class="btn teal-outline">Teal</a>
+            <a href="#!" class="btn waves-effect red-outline">Red</a>
+            <a href="#!" class="btn waves-effect blue-outline">Blue</a>
+            <a href="#!" class="btn waves-effect green-outline">Green</a>
+            <a href="#!" class="btn waves-effect indigo-outline">Indigo</a>
+            <a href="#!" class="btn waves-effect purple-outline">Purple</a>
+            <a href="#!" class="btn waves-effect teal-outline">Teal</a>
         </div>
     </div>
 
