--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -39,21 +39,22 @@ $card-panel-padding: 24px !default;
 
 //Buttons
 // --------------------------------------------------------
-$button-padding: 0.78rem 2rem !default;
-$button-border-radius: 0.125rem !default;
-$button-font-size: 0.81rem !default;
+$button-padding: 0.78rem 1.64rem !default;
+$button-letter-spacing: 0.12rem !default;
+$button-border-radius: 0.24rem !default;
+$button-font-size: 0.875rem !default;
 $button-margin: 0.375rem !default;
 
-$button-icon-size: 1rem !default;
-$button-icon-margin: 0.75rem !default;
+$button-icon-size: 1.2rem !default;
+$button-icon-margin: 0.96rem !default;
 
-$button-large-padding: 1rem 2.4rem !default;
-$button-large-font-size: 0.94rem !default;
-$button-large-icon-size: 1.25rem !default;
-
-$button-small-padding: 0.5rem 1.6rem !default;
+$button-small-padding: 0.5rem 1.4rem !default;
 $button-small-font-size: 0.64rem !default;
 $button-small-icon-size: 0.9rem !default;
+
+$button-large-padding: 1rem 2.4rem !default;
+$button-large-font-size: 0.98rem !default;
+$button-large-icon-size: 1.4rem !default;
 
 $button-fab-size: 3.6rem !default;
 $button-fab-icon-size: 1.3rem !default;
